[gd_scene load_steps=2 format=3 uid="uid://worldselect"]

[ext_resource type="Script" path="res://scenes/ui/WorldSelect.gd" id="1"]

[node name="WorldSelect" type="CanvasLayer"]
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 18.0
offset_right = -18.0
offset_bottom = -18.0
separation = 12

[node name="Title" type="Label" parent="Panel/VBox"]
text = "Select a World"

[node name="Description" type="Label" parent="Panel/VBox"]
text = "Short stage runs with themed bonuses"

[node name="WorldList" type="VBoxContainer" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 220)
separation = 6

[node name="SessionRow" type="HBoxContainer" parent="Panel/VBox"]
separation = 8

[node name="SessionLabel" type="Label" parent="Panel/VBox/SessionRow"]
text = "Session"
custom_minimum_size = Vector2(80, 0)

[node name="SessionLengths" type="OptionButton" parent="Panel/VBox/SessionRow"]
size_flags_horizontal = 3

[node name="StartButton" type="Button" parent="Panel/VBox"]
text = "Start"
